--- a/Hotel_Website/css/style.css
+++ b/Hotel_Website/css/style.css
@@ -11,7 +11,6 @@
     max-width: 1600px;
     overflow: auto;
     padding: 0 20px;
-
 }
 
 /* Main Styling */
@@ -25,7 +24,6 @@ body {
 a {
     columns: #333;
     text-decoration: none;
-
 }
 
 h1,
@@ -51,6 +49,7 @@ p {
 #navbar h1 {
     float: left;
     padding-top: 20px;
+    font-size: 40px;
 }
 
 #navbar ul {
@@ -66,11 +65,32 @@ p {
     display: block;
     padding: 20px;
     text-align: center;
-
 }
 
 #navbar ul li a:hover,
 #navbar ul li a.current {
     background: #444;
+    color: #f7c08a;
+}
+
+/* showcase box */
+
+#showcase {
+    background: url("../img/showcase.jpg") no-repeat center center/cover;
+    height: 600px;
+}
+
+#showcase .showcase-context {
+    color: #fff;
+    text-align: center;
+    padding-top: 170px;
+}
+
+#showcase .showcase-context h1 {
+    font-size: 60px;
+    line-height: 1.2rem;
+}
+
+.text-primary {
     color: #f7c08a;
 }
