hotel website design complete

--- a/Hotel_Website/css/style.css
+++ b/Hotel_Website/css/style.css
@@ -91,17 +91,88 @@ p {
     line-height: 1.2rem;
 }
 
+#showcase .showcase-context p {
+    line-height: 1.7rem;
+}
+
 .text-primary {
     color: #f7c08a;
 }
 
-.lead{
+.lead {
     margin-top: 20px;
     font-size: 20px;
 }
 
-.btn{
-    display: block;
+.btn {
+    display: inline-block;
+    font-size: 18px;
     margin-top: 50px;
-    
+    color: white;
+    background: #333;
+    padding: 13px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: #f7c08a;
+    color: #333;
+}
+
+.btn-light {
+    background: #f4f4f4;
+    color: #333
+}
+
+.homeInfo{
+    height: 400px;
+    margin-top: 1px;
+}
+
+.info-img {
+    float: left;
+    width: 50%;
+    height: 400px
+}
+
+#homeInfo .info-content{
+    color: white;
+    float: right;
+    width: 50%;
+    height: 400px;
+    text-align: center;
+    padding: 50px 30px;
+    overflow: hidden;
+    background: #333;
+    padding-bottom: 20px;
+}
+.btn-light{
+    overflow: hidden;
+}
+.box{
+    margin-top: 12px;
+    margin-left: 100px;
+    float: left;
+    width: 23.3%;
+    padding: 40px;
+    text-align: center;
+    border: 2px solid #333;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.box:hover{
+    background-color:#f7c08a;
+    color: #333;
+}
+
+
+#footer{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background-color: #333;
+    text-align: center;
+    color: white;
 }
