--- a/EdgeLedger/css/style.css
+++ b/EdgeLedger/css/style.css
@@ -8,6 +8,7 @@ body{
   background: #fff;
   color: #333;
   line-height: 1.6;  
+  overflow: auto;
 }
 
 a {
@@ -48,7 +49,71 @@ ul{
 }
 
 #navbar ul a:hover{
+
     border-top: #28a745 2px solid;
     border-bottom: #28a745 2px solid;
 
+}
+
+
+/** HERO **/
+
+.hero{
+    background: url("../images/home/showcase.jpg") no-repeat center center/cover;
+    height: 100vh;
+    position: relative;
+    color: white;
+}
+
+.hero .content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 0 20px;
+}
+
+.hero .content h1 {
+    font-size: 55px;
+}
+
+.hero .content p {
+    font-size: 23px;
+    max-width: 600px;
+    margin:20px 0 30px;
+}
+
+.btn {
+    cursor: pointer;
+    display: inline-block;
+    color: white;
+    background-color: #28a745;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 30px;
+}
+
+.btn:hover {
+    opacity:0.9 ;
+}
+
+.btn-primary {
+    background: #28a745;
+    columns: #fff;
+}
+
+.hero::before{
+    content: "";
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    
+}
+
+.hero * {
+    z-index:10;
 }
